--- a/style.css
+++ b/style.css
@@ -85,14 +85,13 @@ header {
 }
 
 #home a, form, #hello a {
-    box-shadow: white 0 0 1rem;
+    box-shadow: inset white 0 0 1rem;
 }
 
 #home a, #hello a {
     text-decoration-line: none;
     display: block;
     color: white;
-    border: 1px grey solid;
     border-radius: 1.5rem;
     background: none;
     padding: 1rem 1rem;
@@ -117,24 +116,36 @@ header {
  /**  form  **/
 /************/
 form {
-    width: 80%;
+    width: 85%;
     margin: 2rem auto;
-    padding: 2rem 0;
+    padding: 1rem 0;
     color: white;
     text-align: left;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
 }
 
-/**  logIn  **/
-
-#logIn form {
-    text-align: center;
-}
+/**  signIn  **/
 
 fieldset {
-    margin-bottom: 2rem;
+    margin: 1rem;
     padding: 2rem;
+    font-size: 2rem;
+}
+
+#genre {
+    display: flex;
+    justify-content: space-around;
+}
+
+.genre {
+    border: 1px white solid;
+    border-radius: 10%;
+    margin: 1rem;
+    padding: 1rem;
+    background: black;
+    flex-basis: 33%;
+    text-align: center;
 }
 
 input, select {
@@ -157,7 +168,6 @@ i {
     color: red;
     text-shadow: black 2px 2px;
 }
-
 
 #minTarget {
     text-align: center;
