--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@ form {
     margin: 2rem auto;
     padding: 1rem 0;
     color: white;
-    text-align: left;
     background: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
 }
@@ -128,9 +127,15 @@ form {
 /**  signIn  **/
 
 fieldset {
+    display: flex;
     margin: 1rem;
     padding: 2rem;
     font-size: 2rem;
+}
+
+form fieldset:first-child {
+    flex-direction: column;
+
 }
 
 #genre {
