--- a/test/style-test.css
+++ b/test/style-test.css
@@ -74,3 +74,9 @@ body {
 
 }
 
+/*.semi-circle{*/
+/*    width: 200px;*/
+/*    height: 100px;*/
+/*    border-radius: 50% 50% 0 0/ 100% 100% 0 0;*/
+/*    border: 10px solid red;*/
+/*}*/
