--- a/style.css
+++ b/style.css
@@ -53,10 +53,19 @@ section {
 
 .white {
     background: white;
+    color: black;
 }
 
 .chocolate {
     background: chocolate;
+}
+
+form, .modal #number {
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.modal #number {
+    border-radius: 15px;
 }
 
   /******************/
@@ -87,9 +96,10 @@ a {
 /************/
 
 header {
-    padding-top: 10rem;
+    margin: 0 3rem;
+    padding: 3rem 0;
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: white;
     text-shadow: black 0 0 1rem;
     font-family: 'El Messiri', sans-serif;
@@ -118,11 +128,6 @@ header {
     border-top: 2px black solid;
 }
 
-.target div:hover {
-    transform: scale(1.5);
-    border: 3px double black;
-}
-
 /**  hello  **/
 header span {
     display: block;
@@ -148,6 +153,22 @@ header span {
     font-size: 3rem;
 }
 
+.target > div {
+    height: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#plus, #ten {
+    height: 4rem;
+}
+
+#number {
+    font-size: 2rem;
+}
+
   /************/
  /**  form  **/
 /************/
@@ -157,7 +178,6 @@ form {
     margin: 2rem auto;
     padding: .5rem;
     color: white;
-    background: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
 }
 
@@ -238,9 +258,18 @@ a i {
 #logIn footer {
     margin-top: 40px;
 }
+  /*************/
+ /**  modal  **/
+/*************/
 
-
-
+.modal {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 @media screen and (max-width: 600px) {
 
