--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 section {
-    font-size: 4rem;
+    font-size: 3.5rem;
     color: white;
 }
 
@@ -64,8 +64,19 @@ a {
     background: chocolate;
 }
 
-form, .modal #number, #shoot {
-    background: rgba(0, 0, 0, 0.7);
+.frame {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 50%;
+    flex-basis: 100%;
+    background: black;
+    border-radius: 15px;
+    margin: 1rem;
+    padding: 1rem 1rem;
+    box-shadow: inset white 0 0 1rem;
+    font-size: 2rem;
 }
 
   /******************/
@@ -91,33 +102,26 @@ form, .modal #number, #shoot {
  /**  page  **/
 /************/
 
-.modal #number {
-    border-radius: 15px;
-}
-
 header {
-    margin: 0 3rem;
-    padding: 3rem 0;
+    margin: 0 2rem;
+    padding: 1rem 0;
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: white;
     text-shadow: black 0 0 1rem;
     font-family: 'El Messiri', sans-serif;
 }
 
-#home a, form, #shoot {
-    box-shadow: inset white 0 0 1rem;
-}
-
-#home a {
+#number a, .result {
     display: block;
     color: white;
     border-radius: 1.5rem;
-    background: black;
-    padding: 1rem 1rem;
-    width: 50%;
-    margin: 4rem auto;
+    background: #00008b80;
+    padding: 2rem 0;
+    width: 60%;
+
     font-size: 2rem;
+    box-shadow: inset #2196f3 0 0 1rem;
 }
 
 .session span {
@@ -128,148 +132,44 @@ header {
     border-top: 2px black solid;
 }
 
-/**  hello  **/
-/*header span {*/
-/*    display: block;*/
-/*}*/
+.target > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-/*#hello {*/
-/*    color: white;*/
-/*    text-shadow: black 2px 2px;*/
-/*}*/
+#plus {
+    height: 4rem;
+}
 
-/*!** profile **!*/
-/*#profile div {*/
-/*    margin: .5rem;*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    align-items: center;*/
-/*    justify-content: space-evenly;*/
-/*}*/
+button, footer {
+    font-size: 3rem;
+    border: none;
+}
 
-/*.choice {*/
-/*    width: 50%;*/
-/*    margin: auto;*/
-/*    font-size: 3rem;*/
-/*}*/
+  /*************/
+ /** footer  **/
+/*************/
 
-/*.target > div {*/
-/*    height: 6rem;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
+a i {
+    font-size: 5rem;
+    color: red;
+    text-shadow: black 2px 2px;
+}
 
-/*#plus, #ten {*/
-/*    height: 4rem;*/
-/*}*/
+  /*************/
+ /**  modal  **/
+/*************/
 
-/*#number {*/
-/*    font-size: 2rem;*/
-/*}*/
-
-/*  !************!*/
-/* !**  form  **!*/
-/*!************!*/
-
-/*form, #shoot {*/
-/*    width: 85%;*/
-/*    margin: 2rem auto;*/
-/*    padding: .5rem;*/
-/*    color: white;*/
-/*    border-radius: 15px;*/
-/*}*/
-
-/*!**  signIn  **!*/
-
-/*fieldset, #genre {*/
-/*    display: flex;*/
-/*}*/
-
-/*fieldset {*/
-/*    margin: .5rem;*/
-/*    padding: 2rem;*/
-/*    font-size: 2rem;*/
-/*    text-align: left;*/
-/*}*/
-
-/*form fieldset {*/
-/*    flex-direction: column;*/
-/*}*/
-
-/*#genre {*/
-/*    justify-content: space-around;*/
-/*    width: 100%;*/
-/*    text-align: center;*/
-/*}*/
-
-/*#genre span {*/
-/*    border: 1px white solid;*/
-/*    border-radius: 10%;*/
-/*    margin: 1rem;*/
-/*    padding: 1rem;*/
-/*    background: black;*/
-/*    flex-basis: 33%;*/
-/*}*/
-
-/*input, select {*/
-/*    padding: .5rem;*/
-/*    font-size: 2.5rem;*/
-/*    margin: 2rem 0;*/
-/*    width: 80%;*/
-/*}*/
-
-/*button, footer {*/
-/*    font-size: 3rem;*/
-/*    border: none;*/
-/*}*/
-
-/*!**  shooting profil  **!*/
-/*#shoot form div {*/
-/*    margin: 15px;*/
-/*}*/
-
-
-/*  !*************!*/
-/* !** footer  **!*/
-/*!*************!*/
-
-/*footer {*/
-/*    text-align: center;*/
-/*}*/
-
-/*a i {*/
-/*    font-size: 5rem;*/
-/*    color: red;*/
-/*    text-shadow: black 2px 2px;*/
-/*}*/
-
-/*#minTarget {*/
-/*    text-align: center;*/
-/*}*/
-
-/*#minTarget button {*/
-/*    padding: 1rem;*/
-/*    border-radius: 50%;*/
-/*    background: black;*/
-/*}*/
-
-/*#logIn footer {*/
-/*    margin-top: 40px;*/
-/*}*/
-/*  !*************!*/
-/* !**  modal  **!*/
-/*!*************!*/
-
-/*.modal {*/
-/*    position: absolute;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
+.modal {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 @media screen and (max-width: 600px) {
 
