--- a/style.css
+++ b/style.css
@@ -69,14 +69,14 @@ a {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 50%;
     flex-basis: 100%;
+    height: 80%;
     background: black;
     border-radius: 15px;
     margin: 1rem;
     padding: 1rem 1rem;
     box-shadow: inset white 0 0 1rem;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
   /******************/
@@ -112,15 +112,21 @@ header {
     font-family: 'El Messiri', sans-serif;
 }
 
-#number a, .result {
+#number a {
     display: block;
+}
+
+.result {
+    display: flex;
+    flex-direction: column;
+}
+
+#number a, .result {
     color: white;
     border-radius: 1.5rem;
     background: #00008b80;
-    padding: 2rem 0;
+    padding: 3rem 0;
     width: 60%;
-
-    font-size: 2rem;
     box-shadow: inset #2196f3 0 0 1rem;
 }
 
@@ -166,7 +172,8 @@ a i {
     position: absolute;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
+    /*display: flex;*/
     justify-content: center;
     align-items: center;
 }
