--- a/style.css
+++ b/style.css
@@ -16,13 +16,33 @@ body {
     text-align: center;
 }
 
-section {
-    font-size: 3.5rem;
-    color: white;
-}
-
 a {
     text-decoration-line: none;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+  /******************/
+ /**  background  **/
+/******************/
+
+.background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -99;
+}
+
+.background div {
+    height: 17%;
+    border-bottom: black 1px solid;
+}
+
+#halfYellow {
+    height: 50%;
 }
 
   /**************/
@@ -33,26 +53,25 @@ a {
     background: yellow;
 }
 
+.yellow span {
+    display: block;
+    margin: 0 auto;
+}
+
 .red {
     background: red;
 }
 
 .blue {
     background: blue;
-    color: white;
 }
 
 .black {
     background: black;
-    color: white;
-}
-
-#black3 {
-    border: white solid 1px;
 }
 
 #three {
-    border-top : 2px white solid;
+    border-top : 1px white solid;
 }
 
 .white {
@@ -64,38 +83,27 @@ a {
     background: chocolate;
 }
 
+section {
+    font-size: 200%;
+    color: white;
+}
+
+  /*******************/
+ /** index + modal **/
+/*******************/
+
 .frame {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    flex-basis: 100%;
-    height: 80%;
+    flex-basis: 80%;
     background: black;
     border-radius: 15px;
     margin: 1rem;
     padding: 1rem 1rem;
     box-shadow: inset white 0 0 1rem;
-    font-size: 3rem;
-}
-
-  /******************/
- /**  background  **/
-/******************/
-
-.background {
-    position: fixed;
-    width: 100%;
-    z-index: -99;
-}
-
-.background div {
-    height: 20rem;
-    border-bottom: black 1px solid;
-}
-
-#halfYellow {
-    height: 10rem;
+    height: 80%;
 }
 
   /************/
@@ -112,10 +120,6 @@ header {
     font-family: 'El Messiri', sans-serif;
 }
 
-#number a {
-    display: block;
-}
-
 .result {
     display: flex;
     flex-direction: column;
@@ -125,28 +129,43 @@ header {
     color: white;
     border-radius: 1.5rem;
     background: #00008b80;
-    padding: 3rem 0;
+    flex-basis: 30%;
     width: 60%;
     box-shadow: inset #2196f3 0 0 1rem;
 }
 
-.session span {
-    font-size: 2.5rem;
-}
-
-.target div {
-    border-top: 2px black solid;
-}
-
-.target > div {
+#number a {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+/*  target */
+.target {
+    height: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.target div {
+    border-top: 1px black solid;
+    flex-basis: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#ten {
+    flex-direction: row;
+    align-items: flex-start;
+}
+
 #plus {
-    height: 4rem;
+    width: 33%;
+    height: 50%;
+    border-radius: 50% / 0 0 100% 100%;
+    border: black 1px dashed;
 }
 
 button, footer {
@@ -178,18 +197,3 @@ a i {
     align-items: center;
 }
 
-@media screen and (max-width: 600px) {
-
-    .background {
-        width: 100%;
-    }
-
-    .background div {
-        height: 12rem;
-    }
-
-    #halfYellow {
-        height: 6rem;
-    }
-
-}
