--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ a {
 }
 
 .yellow span {
-    display: block;
     margin: 0 auto;
 }
 
@@ -93,7 +92,7 @@ section {
  /** index + modal **/
 /*******************/
 
-.frame {
+.modal {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -107,7 +106,7 @@ section {
     width: 80%;
 }
 
-.frame footer {
+.modal footer {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -166,7 +165,6 @@ header {
     border-top: 1px black solid;
     flex-basis: 10%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -177,10 +175,10 @@ header {
 }
 
 #plus {
-    width: 33%;
     height: 50%;
     border-radius: 50% / 0 0 100% 100%;
     border: black 1px dashed;
+    flex-basis: 30%;
 }
 
 button, footer {
@@ -202,7 +200,7 @@ a i {
  /**  modal  **/
 /*************/
 
-.modal {
+.fullScreen {
     position: absolute;
     width: 100%;
     height: 100%;
