--- a/style.css
+++ b/style.css
@@ -174,10 +174,10 @@ header {
     top: 0;
     left: 40%;
     width: 20%;
+    height: 5%;
     border-radius: 50% / 0 0 100% 100%;
     border: black 1px dashed;
-    font-size: 1rem;
-    color: red;
+    font-size: 5rem;
 }
 
 button, footer {
