--- a/style.css
+++ b/style.css
@@ -20,24 +20,17 @@ a {
     text-decoration-line: none;
 }
 
-  /******************/
- /**  background  **/
-/******************/
+  /*****************/
+ /** userChoice  **/
+/*****************/
 
-.background {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -99;
-}
-
-.background div {
-    height: 17%;
-    border-bottom: black 1px solid;
-}
-
-#halfYellow {
-    height: 50%;
+#userChoice {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
   /**************/
