--- a/style.css
+++ b/style.css
@@ -192,8 +192,8 @@ a i {
     position: absolute;
     width: 100%;
     height: 100%;
-    /*display: none;*/
-    display: flex;
+    display: none;
+    /*display: flex;*/
     flex-direction: column;
     justify-content: center;
     align-items: center;
