--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ section {
 
 .yellow {
     background: yellow;
+
 }
 
-.yellow span {
-    margin: 0 auto;
+#ten {
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .red {
@@ -64,32 +66,28 @@ section {
     background: chocolate;
 }
 
-/*form, .modal #number {*/
-/*    background: rgba(0, 0, 0, 0.7);*/
-/*}*/
+form {
+    background: rgba(0, 0, 0, 0.7);
+}
 
-/*.modal #number {*/
-/*    border-radius: 15px;*/
-/*}*/
+  /******************/
+ /**  background  **/
+/******************/
 
-/*  !******************!*/
-/* !**  background  **!*/
-/*!******************!*/
+.background {
+    position: fixed;
+    width: 100%;
+    z-index: -99;
+}
 
-/*.background {*/
-/*    position: fixed;*/
-/*    width: 100%;*/
-/*    z-index: -99;*/
-/*}*/
+.background div {
+    height: 20rem;
+    border-bottom: black 1px solid;
+}
 
-/*.background div {*/
-/*    height: 20rem;*/
-/*    border-bottom: black 1px solid;*/
-/*}*/
-
-/*#halfYellow {*/
-/*    height: 10rem;*/
-/*}*/
+#halfYellow {
+    height: 10rem;
+}
 
 a {
     text-decoration-line: none;
@@ -109,177 +107,170 @@ header {
     font-family: 'El Messiri', sans-serif;
 }
 
-/*#home a, form, #hello a {*/
-/*    box-shadow: inset white 0 0 1rem;*/
-/*}*/
+#home a, form, #hello a {
+    box-shadow: inset white 0 0 1rem;
+}
 
-/*#home a, #hello a {*/
-/*    display: block;*/
-/*    color: white;*/
-/*    border-radius: 1.5rem;*/
-/*    background: black;*/
-/*    padding: 1rem 1rem;*/
-/*    width: 50%;*/
-/*    margin: 4rem auto;*/
-/*    font-size: 2rem;*/
-/*}*/
+#home a, #hello a {
+    display: block;
+    color: white;
+    border-radius: 1.5rem;
+    background: black;
+    padding: 1rem 1rem;
+    width: 50%;
+    margin: 4rem auto;
+    font-size: 2rem;
+}
 
-/*.session span {*/
-/*    font-size: 2.5rem;*/
-/*}*/
+.session span {
+    font-size: 2.5rem;
+}
 
+/**  hello  **/
+header span {
+    display: block;
+}
 
+#hello {
+    color: white;
+    text-shadow: black 2px 2px;
+}
 
-/*!**  hello  **!*/
-/*header span {*/
-/*    display: block;*/
-/*}*/
+/** profile **/
+#profile div {
+    margin: .5rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
 
-/*#hello {*/
-/*    color: white;*/
-/*    text-shadow: black 2px 2px;*/
-/*}*/
+.choice {
+    width: 50%;
+    margin: auto;
+    font-size: 3rem;
+}
 
-/*!** profile **!*/
-/*#profile div {*/
-/*    margin: .5rem;*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    align-items: center;*/
-/*    justify-content: space-evenly;*/
-/*}*/
+/*  target */
+.target {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+}
 
-/*.choice {*/
-/*    width: 50%;*/
-/*    margin: auto;*/
-/*    font-size: 3rem;*/
-/*}*/
+.target div {
+    height: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-/*!*  target *!*/
-/*.target {*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    flex-direction: column-reverse;*/
-/*}*/
+    border-top: 1px black solid;
+    flex-basis: 10%;
 
-/*.target > div {*/
-/*    height: 6rem;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
+    border-top: 2px black solid;
+}
 
-/*    border-top: 1px black solid;*/
-/*    flex-basis: 10%;*/
+#plus {
+    position: absolute;
+    top: 0;
+    left: 40%;
+    width: 20%;
+    height: 5%;
+    border-radius: 50% / 0 0 100% 100%;
+    border: black 1px dashed;
+    font-size: 5rem;
+}
 
-/*    border-top: 2px black solid;*/
-/*}*/
+  /************/
+ /**  form  **/
+/************/
 
-/*#plus {*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 40%;*/
-/*    width: 20%;*/
-/*    height: 5%;*/
-/*    border-radius: 50% / 0 0 100% 100%;*/
-/*    border: black 1px dashed;*/
-/*    font-size: 5rem;*/
-/*}*/
+form {
+    width: 85%;
+    margin: 2rem auto;
+    padding: .5rem;
+    color: white;
+    border-radius: 15px;
+}
 
-/*#number {*/
-/*    font-size: 2rem;*/
-/*}*/
+/**  signIn  **/
 
-/*  !************!*/
-/* !**  form  **!*/
-/*!************!*/
+fieldset, #genre {
+    display: flex;
+}
 
-/*form {*/
-/*    width: 85%;*/
-/*    margin: 2rem auto;*/
-/*    padding: .5rem;*/
-/*    color: white;*/
-/*    border-radius: 15px;*/
-/*}*/
+fieldset {
+    margin: .5rem;
+    padding: 2rem;
+    font-size: 2rem;
+    text-align: left;
+}
 
-/*!**  signIn  **!*/
+form fieldset {
+    flex-direction: column;
+}
 
-/*fieldset, #genre {*/
-/*    display: flex;*/
-/*}*/
+#genre {
+    justify-content: space-around;
+    width: 100%;
+    text-align: center;
+}
 
-/*fieldset {*/
-/*    margin: .5rem;*/
-/*    padding: 2rem;*/
-/*    font-size: 2rem;*/
-/*    text-align: left;*/
-/*}*/
+#genre span {
+    border: 1px white solid;
+    border-radius: 10%;
+    margin: 1rem;
+    padding: 1rem;
+    background: black;
+    flex-basis: 33%;
+}
 
-/*form fieldset {*/
-/*    flex-direction: column;*/
-/*}*/
+input, select {
+    padding: .5rem;
+    font-size: 2.5rem;
+    margin: 2rem 0;
+    width: 80%;
+}
 
-/*#genre {*/
-/*    justify-content: space-around;*/
-/*    width: 100%;*/
-/*    text-align: center;*/
-/*}*/
+button, footer {
+    font-size: 3rem;
+    border: none;
+}
 
-/*#genre span {*/
-/*    border: 1px white solid;*/
-/*    border-radius: 10%;*/
-/*    margin: 1rem;*/
-/*    padding: 1rem;*/
-/*    background: black;*/
-/*    flex-basis: 33%;*/
-/*}*/
+/**  shooting profil  **/
+#shoot form div {
+    margin: 15px;
+}
 
-/*input, select {*/
-/*    padding: .5rem;*/
-/*    font-size: 2.5rem;*/
-/*    margin: 2rem 0;*/
-/*    width: 80%;*/
-/*}*/
+  /*************/
+ /** footer  **/
+/*************/
 
-/*button, footer {*/
-/*    font-size: 3rem;*/
-/*    border: none;*/
-/*}*/
+footer {
+    text-align: center;
+}
 
-/*!**  shooting profil  **!*/
-/*#shoot form div {*/
-/*    margin: 15px;*/
-/*}*/
+a i {
+    font-size: 5rem;
+    color: red;
+    text-shadow: black 2px 2px;
+}
 
+#minTarget {
+    text-align: center;
+}
 
-/*  !*************!*/
-/* !** footer  **!*/
-/*!*************!*/
+#minTarget button {
+    padding: 1rem;
+    border-radius: 50%;
+    background: black;
+}
 
-/*footer {*/
-/*    text-align: center;*/
-/*}*/
-
-/*a i {*/
-/*    font-size: 5rem;*/
-/*    color: red;*/
-/*    text-shadow: black 2px 2px;*/
-/*}*/
-
-/*#minTarget {*/
-/*    text-align: center;*/
-/*}*/
-
-/*#minTarget button {*/
-/*    padding: 1rem;*/
-/*    border-radius: 50%;*/
-/*    background: black;*/
-/*}*/
-
-/*#logIn footer {*/
-/*    margin-top: 40px;*/
-/*}*/
+#logIn footer {
+    margin-top: 40px;
+}
 
   /***********/
  /** MODAL **/
@@ -321,20 +312,20 @@ header {
     font-size: 5rem;
 }
 
-/*  !**************!*/
-/* !**  result  **!*/
-/*!**************!*/
+  /**************/
+ /**  result  **/
+/**************/
 
-/*#fullScreen {*/
-/*    position: absolute;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    display: none;*/
-/*    !*display: flex;*!*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
+#fullScreen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: none;
+    /*display: flex;*/
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .result {
     display: flex;
