--- a/style.css
+++ b/style.css
@@ -16,18 +16,75 @@ body {
     text-align: center;
 }
 
+main, #home {
+    display: flex;
+    align-items: center;
+}
+
+main {
+    height: 100vh;
+    justify-content: center;
+}
+
+#home {
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 section {
-    font-size: 200%;
-    color: white;
+    font-size: 5vh;
+}
+
+a {
+    text-decoration-line: none;
+}
+
+  /***********/
+ /*  target */
+/***********/
+.target {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -99;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.target div {
+    height: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px black solid;
+    flex-basis: 10%;
+}
+
+#plus {
+    position: absolute;
+    top: 0;
+    left: 40%;
+    width: 20%;
+    height: 5%;
+    border-radius: 50% / 0 0 100% 100%;
+    border: black 1px dashed;
+    font-size: 5rem;
+    color: black;
 }
 
   /**************/
  /**  color   **/
 /**************/
 
+.red, .blue, .black {
+    color: white;
+}
+
 .yellow {
     background: yellow;
-
 }
 
 #ten {
@@ -41,12 +98,10 @@ section {
 
 .blue {
     background: blue;
-    color: white;
 }
 
 .black {
     background: black;
-    color: white;
 }
 
 #black3 {
@@ -59,192 +114,54 @@ section {
 
 .white {
     background: white;
-    color: black;
 }
 
 .chocolate {
     background: chocolate;
 }
 
-form {
-    background: rgba(0, 0, 0, 0.7);
-}
-
-  /******************/
- /**  background  **/
-/******************/
-
-.background {
-    position: fixed;
-    width: 100%;
-    z-index: -99;
-}
-
-.background div {
-    height: 20rem;
-    border-bottom: black 1px solid;
-}
-
-#halfYellow {
-    height: 10rem;
-}
-
-a {
-    text-decoration-line: none;
-}
-
   /************/
  /**  page  **/
 /************/
 
-header {
-    margin: 0 3rem;
-    padding: 3rem 0;
-    font-weight: bold;
-    font-size: 2.5rem;
+#home {
+    box-shadow: inset white 0 0 2rem;
     color: white;
-    text-shadow: black 0 0 1rem;
-    font-family: 'El Messiri', sans-serif;
-}
-
-#home a, form, #hello a {
-    box-shadow: inset white 0 0 1rem;
-}
-
-#home a, #hello a {
-    display: block;
-    color: white;
-    border-radius: 10% 10% 10% 10% / 50% 50% 50% 50%;
+    border-radius: .8em;
     background: black;
-    padding: 1rem 1rem;
-    width: 50%;
-    margin: 4rem auto;
-    font-size: 4rem;
-}
-
-.session span {
-    font-size: 2.5rem;
-}
-
-/**  hello  **/
-header span {
-    display: block;
-}
-
-#hello {
-    color: white;
-    text-shadow: black 2px 2px;
-}
-
-/** profile **/
-#profile div {
-    margin: .5rem;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.choice {
-    width: 50%;
-    margin: auto;
-    font-size: 3rem;
-}
-
-/*  target */
-.target {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column-reverse;
-    position: absolute;
-    top : 0;
-    z-index: -1;
-}
-
-.target div {
-    height: 6rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    border-top: 1px black solid;
-    flex-basis: 10%;
-
-    border-top: 2px black solid;
-}
-
-#plus {
-    position: absolute;
-    top: 0;
-    left: 40%;
-    width: 20%;
-    height: 5%;
-    border-radius: 50% / 0 0 100% 100%;
-    border: black 1px dashed;
-    font-size: 5rem;
-}
-
-  /************/
- /**  form  **/
-/************/
-
-form {
-    width: 85%;
-    margin: 2rem auto;
-    padding: .5rem;
-    color: white;
-    border-radius: 15px;
-}
-
-/**  signIn  **/
-
-fieldset, #genre {
-    display: flex;
-}
-
-fieldset {
-    margin: .5rem;
     padding: 2rem;
-    font-size: 2rem;
-    text-align: left;
+    width: 80%;
+    height: 80vh;
+    font-size: 4em;
 }
 
-form fieldset {
-    flex-direction: column;
+.blazon {
+    width: 100px;
 }
 
-#genre {
-    justify-content: space-around;
-    width: 100%;
+.blazon div {
+    padding: 10px;
+    border-radius: 50%;
+}
+
+  /*************/
+ /**  input  **/
+/*************/
+
+input, select {
     text-align: center;
 }
 
-#genre span {
-    border: 1px white solid;
-    border-radius: 10%;
-    margin: 1rem;
-    padding: 1rem;
-    background: black;
-    flex-basis: 33%;
-}
-
-input, select {
+input {
     padding: .5rem;
     font-size: 2.5rem;
     margin: 2rem 0;
     width: 80%;
 }
 
-button, footer {
-    font-size: 3rem;
-    border: none;
-}
-
-/**  shooting profil  **/
-#shoot form div {
-    margin: 15px;
+select {
+    width: 30%;
+    font-size: 4rem;
 }
 
   /*************/
@@ -261,106 +178,70 @@ a i {
     text-shadow: black 2px 2px;
 }
 
-#minTarget {
-    text-align: center;
-}
-
-#minTarget button {
-    padding: 1rem;
-    border-radius: 50%;
-    background: black;
-}
-
-#logIn footer {
-    margin-top: 40px;
-}
-
   /***********/
  /** MODAL **/
 /***********/
 
-#homeScreen {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+/*.modal {*/
+/*    height: 80%;*/
+/*    width: 80%;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: space-evenly;*/
+/*    align-items: center;*/
+/*    background: black;*/
+/*    border-radius: 15px;*/
+/*    margin: 1rem auto;*/
+/*    padding: 1rem 1rem;*/
+/*    box-shadow: inset white 0 0 1rem;*/
+/*}*/
 
-.modal {
-    height: 80%;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    background: black;
-    border-radius: 15px;
-    margin: 1rem auto;
-    padding: 1rem 1rem;
-    box-shadow: inset white 0 0 1rem;
-}
+/*#result {*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    justify-content: space-evenly;*/
+/*    align-items: center;*/
+/*}*/
 
-#result {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.fa-long-arrow-alt-right {
-    color: green;
-    font-size: 5rem;
-}
+/*.fa-long-arrow-alt-right {*/
+/*    color: green;*/
+/*    font-size: 5rem;*/
+/*}*/
 
   /**************/
  /**  point   **/
 /**************/
 
-#fullScreen {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: none;
-    /*display: flex;*/
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+/*#result span {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: space-between;*/
+/*}*/
 
-#result span {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+/*#final {*/
+/*    display: none;*/
+/*}*/
 
-#final {
-    display: none;
-}
+/*#number span, #result span {*/
+/*    border-radius: 1.5rem;*/
+/*    background: #00008b80;*/
+/*    box-shadow: inset #2196f3 0 0 1rem;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    font-size: 4rem;*/
+/*}*/
 
-#number span, #result span {
-    border-radius: 1.5rem;
-    background: #00008b80;
-    box-shadow: inset #2196f3 0 0 1rem;
-    display: flex;
-    align-items: center;
-    font-size: 4rem;
-}
+/*#result span {*/
+/*    justify-content: space-evenly;*/
+/*    width: 10rem;*/
+/*    height: 10rem;*/
+/*}*/
 
-#result span {
-    justify-content: space-evenly;
-    width: 10rem;
-    height: 10rem;
-}
-
-#number span {
-    width: 60%;
-    flex-basis: 25%;
-    justify-content: center;
-}
+/*#number span {*/
+/*    width: 60%;*/
+/*    flex-basis: 25%;*/
+/*    justify-content: center;*/
+/*}*/
 
 /*@media screen and (max-width: 600px) {*/
 
