--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ footer {
  /** section **/
 /*************/
 
-#switch, #volleyScore, #finalResult {
+#choice, #volleyScore, #finalResult {
     background-color: #ffffff80;
     width: 100%;
     height: 100vh;
@@ -174,7 +174,7 @@ footer {
     height: 80vh;
 }
 
-#switch {
+#choice {
     display: flex;
 }
 
